// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> disabled select should be rendered properly 1`] = `
<Select
  allowClear={true}
  bordered={true}
  choiceTransitionName="zoom"
  className="select"
  disabled={true}
  dropdownClassName="dropDown"
  onChange={[Function]}
  onSelect={[Function]}
  placeholder="Genre"
  transitionName="slide-up"
  virtual={false}
>
  <Option
    className="option"
    value={1}
  >
    Action
  </Option>
  <Option
    className="option"
    value={2}
  >
    Adventure
  </Option>
  <Option
    className="option"
    value={3}
  >
    Fantasy
  </Option>
  <Option
    className="option"
    value={4}
  >
    Sci-fi
  </Option>
  <Option
    className="option"
    value={5}
  >
    Action
  </Option>
  <Option
    className="option"
    value={6}
  >
    Adventure
  </Option>
  <Option
    className="option"
    value={7}
  >
    Fantasy
  </Option>
  <Option
    className="option"
    value={8}
  >
    Sci-fi
  </Option>
  <Option
    className="option"
    value={9}
  >
    Action
  </Option>
  <Option
    className="option"
    value={10}
  >
    Adventure
  </Option>
  <Option
    className="option"
    value={11}
  >
    Fantasy
  </Option>
  <Option
    className="option"
    value={12}
  >
    Sci-fi
  </Option>
</Select>
`;

exports[`<Select /> unbordered select should render properly 1`] = `
<Select
  allowClear={true}
  bordered={true}
  choiceTransitionName="zoom"
  className="select"
  dropdownClassName="dropDown"
  onChange={[Function]}
  onSelect={[Function]}
  placeholder="Genre"
  transitionName="slide-up"
  virtual={false}
>
  <Option
    className="option"
    value={1}
  >
    Action
  </Option>
  <Option
    className="option"
    value={2}
  >
    Adventure
  </Option>
  <Option
    className="option"
    value={3}
  >
    Fantasy
  </Option>
  <Option
    className="option"
    value={4}
  >
    Sci-fi
  </Option>
  <Option
    className="option"
    value={5}
  >
    Action
  </Option>
  <Option
    className="option"
    value={6}
  >
    Adventure
  </Option>
  <Option
    className="option"
    value={7}
  >
    Fantasy
  </Option>
  <Option
    className="option"
    value={8}
  >
    Sci-fi
  </Option>
  <Option
    className="option"
    value={9}
  >
    Action
  </Option>
  <Option
    className="option"
    value={10}
  >
    Adventure
  </Option>
  <Option
    className="option"
    value={11}
  >
    Fantasy
  </Option>
  <Option
    className="option"
    value={12}
  >
    Sci-fi
  </Option>
</Select>
`;
